# FireRedASR2S

./: .gitignore  README.md  requirements.txt
examples_infer/asr/: fireredasr2  inference_asr_aed.sh  inference_asr_llm.sh
examples_infer/asr_system/: fireredasr2s  inference_asr_system.sh  wav
examples_infer/lid/: fireredlid  inference_lid.sh  wav  wav4aed
examples_infer/punc/: fireredpunc  inference_punc.sh
examples_infer/punc/txt/: nopunc.txt
examples_infer/vad/: fireredvad  inference_aed.sh  inference_stream_vad.sh  inference_vad.sh
fireredasr2s/: __init__.py  fireredasr2s-cli  fireredasr2s_cli.py  fireredasr2system.py
fireredasr2s/fireredasr2/: __init__.py  asr.py  speech2text.py
fireredasr2s/fireredasr2/data/: asr_feat.py  token_dict.py
fireredasr2s/fireredasr2/models/: fireredasr_aed.py  fireredasr_llm.py  lstm_lm.py  param.py
fireredasr2s/fireredasr2/tokenizer/: aed_tokenizer.py  llm_tokenizer.py
fireredasr2s/fireredlid/: README.md  __init__.py  lid.py  speech2lang.py
fireredasr2s/fireredpunc/: __init__.py  add_punc.py  punc.py
fireredasr2s/fireredvad/: __init__.py  aed.py  stream_vad.py  vad.py
runtime/triton_tensorrt/: Dockerfile  README.md  ctc.py  docker-compose.yml  http_client.py  infer.py  pyproject.toml  run.sh
runtime/triton_tensorrt/model_repo_fireredasr2_aed/fireredasr/: config.pbtxt
runtime/triton_tensorrt/model_repo_fireredasr2_aed/fireredasr/1/: aed_tokenizer.py  asr_feat.py  fireredasr_aed_tensorrt.py  model.py
runtime/triton_tensorrt/scripts/: convert_checkpoint.py  export_encoder_tensorrt.py  export_tensorrt.sh
(+24 files in other folders)
